[metadata]
name = edges_cal
description = Calibration routines for EDGES data
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/edges-collab/edges-cal
author = EDGES Team
author_email = nmahesh4@asu.edu
license = MIT
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    astropy>=5.0
    cached-property
    click
    edges-io>=3.0.0
    h5py
    matplotlib
    numpy
    pyyaml
    rich
    scipy
    statsmodels
    toml
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    edges-cal = edges_cal.cli:main

[options.extras_require]
dev =
    beautifultable
    jupyter
    papermill
    pre-commit
    pytest
    pytest-cases
    pytest-cov
    python-semantic-release
    tox
report =
    beautifultable
    jupyter
    papermill

[test]
extras = True

[tool:pytest]
addopts =
    --cov edges_cal --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
